--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
     <header class="bg-primary text-white p-6 shadow-lg">
         <div class="max-w-6xl mx-auto">
             <h1 class="text-3xl font-bold mb-2">📚 Apostila Completa de Recursos UI/UX</h1>
-            <p class="text-primary-light">Guia completo com 31 componentes essenciais de interface</p>
+            <p class="text-white">Guia completo com 31 componentes essenciais de interface</p>
         </div>
     </header>
 
     <!-- Navigation -->
     <nav class="bg-gray-100 dark:bg-gray-800 p-4 sticky top-0 z-40 shadow-md">
         <div class="max-w-6xl mx-auto">
-            <div class="flex flex-wrap gap-2">
+            <div class="flex flex-wrap gap-2 justify-center">
                 <button onclick="scrollToSection('toast')" class="px-3 py-1 bg-primary text-white rounded text-sm hover:bg-primary-dark transition-colors">Toast</button>
                 <button onclick="scrollToSection('modal')" class="px-3 py-1 bg-primary text-white rounded text-sm hover:bg-primary-dark transition-colors">Modal</button>
                 <button onclick="scrollToSection('dropdown')" class="px-3 py-1 bg-primary text-white rounded text-sm hover:bg-primary-dark transition-colors">Dropdown</button>
