--- a/index.html
+++ b/index.html
@@ -1816,6 +1816,23 @@
             }
         });
 
+		// Sincroniza o toggle com o estado do dark mode ao carregar
+		window.addEventListener('DOMContentLoaded', function() {
+			const darkMode = localStorage.getItem('darkMode') === 'true' || 
+							 (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches);
+			
+			const switch2 = document.getElementById('switch2');
+			const toggle2 = switch2.querySelector('span');
+			
+			if (darkMode) {
+				document.documentElement.classList.add('dark');
+				toggle2.classList.remove('translate-x-1');
+				toggle2.classList.add('translate-x-6');
+				switch2.classList.remove('bg-gray-300');
+				switch2.classList.add('bg-primary');
+			}
+		});
+
         // Scroll to section
         function scrollToSection(sectionId) {
             document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
@@ -2028,23 +2045,35 @@ if (document.readyState === 'loading') {
             }
         }
 
-        // Toggle switch functionality
-        function toggleSwitch(switchId) {
-            const switchElement = document.getElementById(switchId);
-            const toggle = switchElement.querySelector('span');
+		// Toggle switch functionality
+		function toggleSwitch(switchId) {
+			const switchElement = document.getElementById(switchId);
+			const toggle = switchElement.querySelector('span');
 
-            if (toggle.classList.contains('translate-x-6')) {
-                toggle.classList.remove('translate-x-6');
-                toggle.classList.add('translate-x-1');
-                switchElement.classList.remove('bg-primary');
-                switchElement.classList.add('bg-gray-300');
-            } else {
-                toggle.classList.remove('translate-x-1');
-                toggle.classList.add('translate-x-6');
-                switchElement.classList.remove('bg-gray-300');
-                switchElement.classList.add('bg-primary');
-            }
-        }
+			if (toggle.classList.contains('translate-x-6')) {
+				toggle.classList.remove('translate-x-6');
+				toggle.classList.add('translate-x-1');
+				switchElement.classList.remove('bg-primary');
+				switchElement.classList.add('bg-gray-300');
+				
+				// Se for o switch de dark mode, desativa
+				if (switchId === 'switch2') {
+					document.documentElement.classList.remove('dark');
+					localStorage.setItem('darkMode', 'false');
+				}
+			} else {
+				toggle.classList.remove('translate-x-1');
+				toggle.classList.add('translate-x-6');
+				switchElement.classList.remove('bg-gray-300');
+				switchElement.classList.add('bg-primary');
+				
+				// Se for o switch de dark mode, ativa
+				if (switchId === 'switch2') {
+					document.documentElement.classList.add('dark');
+					localStorage.setItem('darkMode', 'true');
+				}
+			}
+		}
 
         // Slider functionality
         function updateSliderValue(sliderId, valueId, suffix) {
